# GlassBox

./: CMakeLists.txt  GlassBox.cpp  GlassBox.h  README.md  main.cpp
.github/workflows/: build-win.yml
examples/: CMakeLists.txt  cpu_hog.cpp  cpu_limit_example.cpp  memory_limit_example.cpp  timeout_example.cpp
